k8specs/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/infox-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - image: johnmesp/infox-web
          livenessProbe:
            exec:
              command:
                - curl localhost:5000/healthy
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 3
          name: web
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /app/public
              name: web-claim0
      restartPolicy: Always
      terminationGracePeriodSeconds: 3
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
status: {}
