k8specs/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/infox-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - celery
            - -A
            - celery_worker.celery
            - worker
          image: johnmesp/infox-worker
          name: worker
          ports:
            - containerPort: 3001
          resources: {}
          volumeMounts:
            - mountPath: /app/public
              name: worker-claim0
      restartPolicy: Always
      terminationGracePeriodSeconds: 3
      volumes:
        - name: worker-claim0
          persistentVolumeClaim:
            claimName: worker-claim0
status: {}
